fix button alignment issues

--- a/client/src/common/Button.css
+++ b/client/src/common/Button.css
@@ -15,22 +15,14 @@ width: 100%;
 height: 100%;
   text-transform: uppercase;
 }
-.button-loading{
-  animation: pulsate 2s infinite;
-}
-.button-loading::after{
-  content: "ING...";
-  height: 40px;
-  background: #ae27e8;
-  animation: pulsate 2s infinite;
-}
+
 .delete-btn{
   background: #f7f7f700;
   border: 1px solid #444444ab;
   transition: all 0.1s ease-in-out;
   grid-row: 4/5;
-  grid-column:4/5;
-  width: 80%;
+  grid-column:3/5;
+  width: 20%;
   position: relative;
   z-index: 2;
   opacity: 0;
@@ -38,13 +30,11 @@ height: 100%;
   outline-style: none;
   cursor: pointer;
   text-align: center;
-  justify-self:center;
+  justify-self:end;
   align-self: center;
-  padding-right: 3px;
   color: #444444;
   font-size: 0.8rem;
   white-space: nowrap;
-
 }
 .delete-btn::after{
   background: #EE40407d;
@@ -79,14 +69,11 @@ height: 100%;
   color: white;
 }
 .delete-btn-danger{
-  /* background: #ff3232db!important; */
   color: #ff3232db !important;
-  width: 100%;
-  justify-self: center;
+  width: 30%;
+  justify-self: end;
   align-self: center;
   font-size: 0.8rem;
-  /* grid-row: 4/5;
-  grid-column:4/5; */
   transition: all 0.1s ease;
   border: 1px solid #ff3232;
 }
@@ -100,15 +87,14 @@ height: 100%;
   color:white !important;
 }
 .ind-message:hover .delete-btn{
-  opacity: 0.9;
+  opacity: 1;
 }
 .delete-btn-loading{
-background: white!important;
-border: none;
-border-radius: 50%!important;
-transform: scale(20);
-opacity: 1;
-transition: all 0.4s ease;
+  background: white!important;
+  border: 1px solid #ff3232 !important;
+  color: #ff3232db !important;
+  opacity: 1;
+  transition: all 0.4s ease;
 }
 .delete-btn-loading::before{
   background: white!important;
@@ -117,7 +103,6 @@ transition: all 0.4s ease;
   background: white!important;
 }
 .follow-button{
-  width: 100%;
   background: #ae27e8;
   border: 1px solid gray;
   color: white;
@@ -142,20 +127,4 @@ transition: all 0.4s ease;
   height: 40px;
   text-transform: uppercase;
   cursor: pointer;
-}
-
-
-@keyframes pulsate {
-  0%{
-    transform: scale(1);
-  }
-  30%{
-    transform: scale(1.01);
-  }
-  70%{
-    transform: scale(1);
-  }
-  100%{
-    transform: scale(1.01);
-  }
 }
